--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -5,6 +5,15 @@ body, html {
 	height: 100%;
   font-family: abel;
   font-size: 125%;
+	background-color: ghostwhite
+}
+
+h1 {
+	margin:0;
+}
+
+hr{
+	margin-right: 20px;
 }
 
 .bg {
@@ -81,28 +90,47 @@ body, html {
 
 .menu-container {
   padding:20px;
+	height:320px;
 }
 
-.menu-container div{
-margin: auto;
-height:320px;
-width: 30%;
+.menu-container-hidden {
+	height:320px;
+	display: none;
+}
+
+.menu:hover .menu-container-hidden {
+	display: block;
+}
+
+.menu-button {
+	border-style: solid;
+	border-radius: 5px;
+	border: gray;
+	padding:5px;
+	margin:5px;
+	border-width: thin;
 }
 
 .logo {
-  height: 100%;
+  height: 0;
   display: inline-block;
+	/*visibility: hidden;*/
 }
 
 .menu {
   display: inline-block;
-  margin-bottom: 20px;
-  position: absolute;
+
+  /*margin-bottom: 20px;
+  position: absolute;*/
 }
 
 .impressum {
   text-align: center;
   margin:10px;
+	clear: right;
+	bottom: 0px;
+  width: 100%;
+  /*position: absolute;*/
 }
 .impressum a{
   text-decoration: none;
@@ -124,6 +152,7 @@ width: 30%;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	/*z-index: 1;*/
 	right: 0px;
+	float:right;
 }
 
 .dropdown-menu-lang:hover .dropdown-content-lang {
@@ -146,4 +175,78 @@ width: 30%;
 
 .pure-menu-selected{
   background-color: #66CC33;
+}
+
+.event-link{
+	text-decoration:none;
+	width: 80%;
+}
+
+.event-list-box {
+	height: 400px;
+	overflow: hidden;
+  background-size: cover;
+  background-position: center;
+}
+
+.event-list-headline-wrapper{
+	background-color: rgba(0, 0, 0, 0.6);
+	color: white;
+
+}
+
+.event-list-headline{
+	font-weight: bold;
+	font-size: 125%;
+}
+
+.content{
+	width:70%;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: white;
+	overflow: auto;
+	margin-top:20px;
+	padding:20px;
+}
+
+
+.events-date {
+	font-size: x-large;
+}
+.event-date {
+	display:inline-block;
+}
+
+.event-main-image {
+	width:40%;
+	float:right;
+	margin:20px;
+}
+.event-headline-text{
+	margin:0;
+	display:inline-block;
+}
+
+.event-headline{
+	margin-bottom: 10px;
+}
+
+.menu-wrapper {
+	width: 100%;
+	background-color: white;
+	border-bottom: solid 1px;
+}
+
+.event-text {
+	margin-right: 20px;
+}
+
+/*gallery*/
+.gallery .pure-u-1-4 div{
+	padding:5px;
+}
+
+.gallery .pure-u-1-4 div img{
+	width:100%
 }
