--- a/HoPe/templates/base_02.html
+++ b/HoPe/templates/base_02.html
@@ -9,5 +9,10 @@
  </head>
   <body>
     {% block content %}{% endblock %}
+    <div class="impressum">
+      <hr>
+      <a href="#">{% trans "Impressum" %}</a>
+    </div>
+  </div>
   </body>
  <html>
