--- a/HoPe/templates/base_02.html
+++ b/HoPe/templates/base_02.html
@@ -11,7 +11,7 @@
     {% block content %}{% endblock %}
     <div class="impressum">
       <hr>
-      <a href="#">{% trans "Impressum" %}</a>
+      <a href="/{{request.LANGUAGE_CODE}}/a/impressum">{% trans "Impressum" %}</a>
     </div>
   </div>
   </body>
