--- a/HoPe/Foerder/templates/Foerder/event.html
+++ b/HoPe/Foerder/templates/Foerder/event.html
@@ -1,27 +1,94 @@
-{% extends "base.html" %}
+{% extends "base_02.html" %}
 {% load i18n %}
 {% load static %}
 {% block content %}
-
-<div class="content content-first">
-	<div class="event-content">
-		{% if event %}
-			{% if request.LANGUAGE_CODE == 'de' %}
-				<h1 class="event-headline">{{event.event_object.title_german}}</h1>
-				<img src="{% static event.main_image_object|safe %}" class="event-main-image">
-				<div class="event-text">{{event.event_object.text_german}}</div>
-			{% else %}
-				<h1 class="event-headline">{{event.event_object.title_english}}</h1>
-				<img src="{% static event.main_image_object|safe %}" class="event-main-image">
-				<div class="event-text">{{event.event_object.text_english}}</div>
-
-			{% endif %}
-		{% endif %}
-	</div>
-
-<!--Deutscher Titel: { events.first.title_german }}-->
-
-<!--
+<div class="menu-wrapper">
+  <div class="dropdown-menu-lang">
+    <span>
+      {% if request.LANGUAGE_CODE == 'de' %}
+      <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
+     {% else %}
+      <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
+     {% endif %}
+    </span>
+    <div class="dropdown-content-lang">
+      <ul class="list-lang">
+        <li>
+          <a href= "/de/a" >
+            <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
+         </a>
+        </li>
+        <li>
+          <a href= "/en/a" >
+            <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="menu">
+    <div class="menu-button">
+      menu
+    </div>
+    <div class="menu-container-hidden ">
+      <img src="{% static 'Hope_trans.jpeg' %}" class="logo">
+      <div class="pure-menu custom-restricted-width menu">
+        <ul class="pure-menu-list menu">
+          <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/home" class="pure-menu-link">{% trans "Home" %}</a></li>
+          <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/about_us" class="pure-menu-link">{% trans "About_us" %}</a></li>
+          <li class="pure-menu-item pure-menu-selected"><a href="/{{request.LANGUAGE_CODE}}/a/events" class="pure-menu-link">{% trans "Projects" %}</a></li>
+          <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/support_us" class="pure-menu-link">{% trans "Support_us" %}</a></li>
+          <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/partner" class="pure-menu-link">{% trans "Partner " %}</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
--->
+<div class="bg-picture bg">
+</div>
+<div class="content-wrapper">
+  <div class="content">
+    {% if event %}
+      {% if request.LANGUAGE_CODE == 'de' %}
+        {% if event.main_image_object %}
+          <img src="{% static event.main_image_object|safe %}" class="event-main-image">
+        {% endif %}
+        <div class="event-headline">
+          <h1 class="event-headline-text">{{event.event_object.title_german}}</h1>
+          <div class="event-date">{{ event.event_object.pub_date|date:"d.m.Y"}}</div>
+        </div>
+
+        <div class="event-text">{{event.event_object.text_german}}</div>
+      {% else %}
+        {% if event.main_image_object %}
+          <img src="{% static event.main_image_object|safe %}" class="event-main-image">
+        {% endif %}
+        <div class="event-headline">
+          <h1 class="event-headline">{{event.event_object.title_english}}</h1>
+          <div class="event-date">{{ event.event_object.pub_date|date:"d.m.Y"}}</div>
+        </div>
+
+        <div class="event-text">{{event.event_object.text_english}}</div>
+
+      {% endif %}
+    {% endif %}
+  </div>
+
+  {% if event.images_object %}
+    <div class="content">
+      <div class="pure-g gallery ">
+        {% for img in event.images_object %}
+        <div class="pure-u-1-4">
+          <div>
+            <img src="{% static img|safe %}" alt="Amsel" />
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  {% endif %}
+</div>
+
+
+
 {% endblock %}
