--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -1,78 +1,51 @@
-{% extends "base.html" %}
+{% extends "base_02.html" %}
 {% load i18n %}
 {% load static %}
 {% block content %}
+<div class="dropdown-menu-lang bg-white">
+  <span>
+    {% if request.LANGUAGE_CODE == 'de' %}
+    <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
+   {% else %}
+    <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
+   {% endif %}
+  </span>
+  <div class="dropdown-content-lang">
+    <ul class="list-lang">
+      <li>
+        <a href= "/de/a" >
+          <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
+       </a>
+      </li>
+      <li>
+        <a href= "/en/a" >
+          <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
 <div class="bg-picture splash-container">
-<div class="splash">
-  <h1 class="splash-head"><span>WOEZ</span><span class="rotate-c">C</span><!--{% trans "splash-title" %}--></h1>
-  <p class="splash-subhead"><!--Translated from Ewe to English means you are warmly welcome as a visitor to our website!-->{% trans "splash-text" %}</p>
-</div>
-</div>
-<div class="content-wrapper bg">
-<div class="logo-wrapper">
-  <img src="{% static 'Hope_trans.jpeg' %}" class="logo">
-  <hr class="logo-line">
-  <h1 class="logo-title">Freunde & Förderer HoPe Ghana e.V.</h1>
-</div>
-<div class ="content">
-  <h1 class="content-title"><!--What do we do?-->{% trans "content1-title" %}</h1>
-  <div class="media-horizontal">
-    <img src="{% static 'Hope_01.jpeg' %}" class="content-picture">
-    <img src="{% static 'Hope_02.jpeg' %}" class="content-picture">
-  </div>
-  <p class="content-text bold">
-   {% trans "content1-text1" %}
-   <!-- We do not help, we support-->!
-  </p>
-  <p class="content-text">
-    <!--Because in our opinion, the best support we can provide is to strengthen self-help. From our office in Tokokoe we organize workshops
-    and lessons from locals for locals. We offer different opportunities for children and adults of all ages.-->
-    {% trans "content1-text2" %}
-  </p>
-</div>
-
-<div class ="content">
-  <h1 class="content-title"><!--HoPe what does that mean?-->{% trans "content2-title" %}</h1>
-  <p class="content-text">
-    <!--Our NGO (non-governmental organisation) "House of Perspectives" is not only a place where you can learn new things,
-    but also offers an equal future regardless of age, gender and skin colour. Our organization was founded with the aim to
-    improve the low level of education in rural areas of Ghana.-->{% trans "content2-text1" %}
-  </p>
-  <p class="content-text">
-    <!--And this is exactly what we stand up for since our foundation in February 2018 with our NGO HoPe and since 2019 with our association
-    Friends & Donators of HoPe Ghana.”-->{% trans "content2-text2" %}
-  </p>
-  <div class="media-horizontal">
-    <img src="{% static 'HopeTriangle.png' %}" class="content-triangle">
-    <img src="{% static 'HopeTriangle2.png' %}" class="content-triangle rotate-180">
-    <img src="{% static 'HopeTriangle3.png' %}" class="content-triangle">
+  <div class="splash">
+    <h1 class="splash-head"><span>WOEZ</span><span class="rotate-c">C</span><!--{% trans "splash-title" %}--></h1>
+    <p class="splash-subhead"><!--Translated from Ewe to English means you are warmly welcome as a visitor to our website!-->{% trans "splash-text" %}</p>
   </div>
 </div>
 
-<div class ="content disp-table">
-  <div class="content-left">
-    <img src="{% static 'Hope_04.jpeg' %}" class="content3-picture">
-    <p class="content-text bold text-center">
-      <!--Adults are present-->{% trans "content3-title1" %}
-    </p>
-    <p class="content-text">
-      <!--We live right now. That is why it is so important for adults not to neglected in our organization. So there is the possibility
-      for the adults to refresh their knowledge in mathematics and English and to learn new things. The evening workshops are particularly
-      exciting. Topics such as health, climate change and how to deal with conflicts are explained vividly and discussed together.-->{% trans "content3-text1" %}
-    </p>
+<div class ="content-splash-wrapper bg-white">
+  <div class="menu-container ">
+    <img src="{% static 'Hope_trans.jpeg' %}" class="logo">
+    <div class="pure-menu custom-restricted-width menu">
+      <ul class="pure-menu-list menu">
+        <li class="pure-menu-item pure-menu-selected"><a href="/{{request.LANGUAGE_CODE}}/a/home" class="pure-menu-link">{% trans "Home" %}</a></li>
+        <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/about_us" class="pure-menu-link">{% trans "About_us" %}</a></li>
+        <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/events" class="pure-menu-link">{% trans "Projects" %}</a></li>
+        <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/support_us" class="pure-menu-link">{% trans "Support_us" %}</a></li>
+        <li class="pure-menu-item"><a href="/{{request.LANGUAGE_CODE}}/a/partner" class="pure-menu-link">{% trans "Partner " %}</a></li>
+      </ul>
+    </div>
   </div>
-  <div class="content-right">
-    <p class="content-text bold text-center">
-      <!--Children are the future-->{% trans "content3-title2" %}
-    </p>
-    <p class="content-text">
-      <!--Of course there are schools, but like everywhere there are children who need more support. These, but also all other pupils, can
-      repeat topics in mathematics and English at any time and get individual support in case of difficulties. In addition, the doors of our
-      small library are open to them at all times.-->{% trans "content3-text2" %}
-    </p>
-    <img src="{% static 'Hope_03.jpeg' %}" class="content3-picture">
-  </div>
-</div>
 
 
 {% endblock %}
