--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -2,10 +2,11 @@ body, html {
 	margin:0;
 	padding:0;
 	width: 100%;
-	height: 100%;
+	min-height: 100vh;
   font-family: abel;
   font-size: 125%;
-	background-color: ghostwhite
+	/*background-color: ghostwhite;*/
+	background-color: rgb(248,248,255,0.5)
 }
 
 h1, h2 {	margin:0;
@@ -16,9 +17,12 @@ hr{
 }
 
 .bg {
-	/*background-image: linear-gradient(to bottom right, #EAEAEA 50%, green);*/
-	/*background-color: #EAEAEA;*/
-	background-color: white;
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left:0;
+	z-index: -1;
 }
 
 .bg-picture {
@@ -75,7 +79,7 @@ hr{
     opacity: 0.9;
 }
 
-.content-wrapper {
+.content-splash-wrapper {
   position: absolute;
   top: 99%;
   width: 100%;
@@ -125,10 +129,13 @@ hr{
 
 .impressum {
   text-align: center;
-  margin:10px;
+  margin-top:20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	clear: right;
 	bottom: 0px;
   width: 100%;
+	background-color: white;
   /*position: absolute;*/
 }
 .impressum a{
@@ -209,7 +216,9 @@ hr{
 	padding:20px;
 }
 
-
+.content-wrapper{
+	min-height: 87vh;
+}
 .events-date {
 	font-size: x-large;
 }
