--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -261,8 +261,14 @@ hr{
 
 .about-us-main-image {
 	width: 50%;
-	float:right;
+	/*float:right;*/
 	margin:10px;
+	margin-left:auto;
+	margin-right: auto;
+}
+
+.about-us-main-image img {
+	width:100%;
 }
 
 .document-member {
