--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -48,25 +48,23 @@
 <div class="bg-picture bg">
 </div>
 <div class="content-wrapper">
-  <div class="content">
 
+  <div class="content">
     <h1 class="about-us-headline">
       {% trans "about_us_headline_01" %}
     </h1>
-
-
-
     <div class="about-us-text cursiv">
       {% trans "about_us_content_01" %}
     </div>
   </div>
 
-  <div class="about-us-main-image">
-    <img src="{% static 'Hope_02.jpeg' %}">
-  </div>
-  <div class="content">
-    <div class="about-us-text">
+  <div class="content_02">
+    <div class="about-us-text bg-white">
     {% trans "about_us_content_02" %}
+    </div>
+
+    <div class="about-us-main-image">
+      <img src="{% static 'Hope_02.jpeg' %}">
     </div>
   </div>
 
