--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -216,6 +216,15 @@ hr{
 	padding:20px;
 }
 
+.content_02 {
+	width:70%;
+	margin-right: auto;
+	margin-left: auto;
+	overflow: auto;
+	margin-top:20px;
+	padding:20px;
+}
+
 .content-wrapper{
 	min-height: 87vh;
 }
@@ -261,7 +270,7 @@ hr{
 
 .about-us-main-image {
 	width: 50%;
-	/*float:right;*/
+	float:right;
 	margin:10px;
 	margin-left:auto;
 	margin-right: auto;
@@ -270,6 +279,7 @@ hr{
 .about-us-main-image img {
 	width:100%;
 }
+
 
 .document-member {
 	text-decoration: none;
@@ -290,6 +300,9 @@ hr{
 
 .about-us-text {
 	margin-top:10px;
+	float:left;
+	width:45%;
+
 }
 
 .cursiv {
