--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -50,17 +50,19 @@
 <div class="content-wrapper">
 
   <div class="content">
-    <h1 class="about-us-headline">
-      {% trans "about_us_headline_01" %}
-    </h1>
     <div class="about-us-text cursiv">
       {% trans "about_us_content_01" %}
     </div>
   </div>
 
   <div class="content_02">
-    <div class="about-us-text bg-white">
-    {% trans "about_us_content_02" %}
+    <div class="about-us-p bg-white">
+      <h1 class="about-us-headline">
+        {% trans "about_us_headline_01" %}
+      </h1>
+      <div class="about-us-text">
+        {% trans "about_us_content_02" %}
+      </div>
     </div>
 
     <div class="about-us-main-image">
