--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -6,7 +6,7 @@ body, html {
   font-family: abel;
   font-size: 125%;
 	/*background-color: ghostwhite;*/
-	background-color: rgb(248,248,255,0.5)
+	/*background-color: rgb(248,248,255,0.5)*/
 }
 
 h1, h2 {	margin:0;
@@ -276,11 +276,13 @@ hr{
 }
 
 .about-us-main-image {
-	width: 50%;
+	width: 45%;
 	float:right;
 	margin:10px;
 	margin-left:auto;
 	margin-right: auto;
+	padding:10px;
+	background-color: white;
 }
 
 .about-us-main-image img {
