--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -5,6 +5,7 @@ body, html {
 	min-height: 100vh;
   font-family: abel;
   font-size: 125%;
+	text-align: justify;
 	/*background-color: ghostwhite;*/
 	/*background-color: rgb(248,248,255,0.5)*/
 }
