--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -61,7 +61,14 @@
         {% trans "about_us_headline_01" %}
       </h1>
       <div class="about-us-text">
-        {% trans "about_us_content_02" %}
+        <p>{% trans "about_us_content_02" %}</p>
+        <p>{% trans "Unser Vorstand besteht aus vier Personen." %} </p>
+        <ul>
+          <li>{% trans "Vorstandsvorsitzende: Jolina Oelsner"%}</li>
+          <li>{% trans "stellvertretender Vorsitzender: Florian Oelsner"%}</li>
+          <li>{% trans "Öffentlichkeitsarbeit: Richard Lüdtke"%}</li>
+          <li>{% trans "Schatzmeisterin: Ines Oelsner"%}</li>
+        </ul>
       </div>
     </div>
 
