--- a/HoPe/Foerder/templates/Foerder/events.html
+++ b/HoPe/Foerder/templates/Foerder/events.html
@@ -69,7 +69,9 @@
             </div>
           {% endfor %}
         {% else %}
-          <p>{% trans "events_Not_avaiable" %}</p>
+          <div class="pure-u-1-3">
+            <p>{% trans "events_Not_avaiable" %}</p>
+          </div>
         {% endif %}
       </div>
     </div>
@@ -93,7 +95,9 @@
             </div>
           {% endfor %}
         {% else %}
-          <p>{% trans "events_Not_avaiable" %}</p>
+          <div class="pure-u-1-3">
+            <p>{% trans "events_Not_avaiable" %}</p>
+          </div>
         {% endif %}
       </div>
     </div>
