--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -10,11 +10,18 @@ body, html {
 	/*background-color: rgb(248,248,255,0.5)*/
 }
 
-h1, h2 {	margin:0;
+h1, h2, h3 {
+	margin:0 0 20px 0;
 }
+
+
 
 hr{
 	margin-right: 20px;
+}
+
+.bold {
+	font-weight: bold;
 }
 
 .bg {
@@ -145,11 +152,8 @@ hr{
 }
 
 .dropdown-menu-lang{
-  position: fixed;
-  right:0px;
-  top:0px;
-  z-index: 3;
   padding:10px;
+	float: right;
 }
 
 .dropdown-content-lang {
