--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -28,8 +28,8 @@
 
 <div class="bg-picture splash-container index-splash">
   <div class="splash">
-    <h1 class="splash-head"><span>WOEZ</span><span class="rotate-c">C</span><!--{% trans "splash-title" %}--></h1>
-    <p class="splash-subhead"><!--Translated from Ewe to English means you are warmly welcome as a visitor to our website!-->{% trans "splash-text" %}</p>
+    <h1 class="splash-head"><span>WOEZ</span><span class="rotate-c">C</span></h1>
+    <p class="splash-subhead">{% trans "splash-text" %}</p>
   </div>
 </div>
 
