translation, text formatting

--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -14,12 +14,12 @@
     <div class="dropdown-content-lang">
       <ul class="list-lang">
         <li>
-          <a href= "/de/a" >
+          <a href= "/de/a/about_us" >
             <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
          </a>
         </li>
         <li>
-          <a href= "/en/a" >
+          <a href= "/en/a/about_us" >
             <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
           </a>
         </li>
