--- a/HoPe/Foerder/templates/Foerder/events.html
+++ b/HoPe/Foerder/templates/Foerder/events.html
@@ -15,12 +15,12 @@
     <div class="dropdown-content-lang">
       <ul class="list-lang">
         <li>
-          <a href= "/de/a" >
+          <a href= "/de/a/events" >
             <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
          </a>
         </li>
         <li>
-          <a href= "/en/a" >
+          <a href= "/en/a/events" >
             <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
           </a>
         </li>
