--- a/HoPe/Foerder/templates/Foerder/partner.html
+++ b/HoPe/Foerder/templates/Foerder/partner.html
@@ -14,12 +14,12 @@
     <div class="dropdown-content-lang">
       <ul class="list-lang">
         <li>
-          <a href= "/de/a" >
+          <a href= "/de/a/partner" >
             <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
          </a>
         </li>
         <li>
-          <a href= "/en/a" >
+          <a href= "/en/a/partner" >
             <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
           </a>
         </li>
@@ -59,7 +59,7 @@
       </div>
       <div class="pure-u-1-4 partner-logo-container">
         <a href= "http://oekozentrum.eu/">
-          <img src="{% static 'lkj-h180.jpg' %}" alt='Oekozentrum Magdeburg' title='Oekozentrum Magdeburg'/>
+          <img src="{% static 'oeko.png' %}" alt='Oekozentrum Magdeburg' title='Oekozentrum Magdeburg'/>
         </a>
       </div>
     </div>
