--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -78,4 +78,11 @@
   </div>
 
 
+</div>
+<div class="empty">
+  </div>
+<div class="impressum">
+  <a href="/{{request.LANGUAGE_CODE}}/a/impressum">{% trans "Impressum" %}</a>
+</div>
+
 {% endblock %}
