--- a/HoPe/Foerder/templates/Foerder/event.html
+++ b/HoPe/Foerder/templates/Foerder/event.html
@@ -89,6 +89,11 @@
   {% endif %}
 </div>
 
+<div class="empty">
+</div>
 
+<div class="impressum">
+  <a href="/{{request.LANGUAGE_CODE}}/a/impressum">{% trans "Impressum" %}</a>
+</div>
 
 {% endblock %}
