--- a/HoPe/Foerder/templates/Foerder/events.html
+++ b/HoPe/Foerder/templates/Foerder/events.html
@@ -104,5 +104,11 @@
   </div>
 </div>
 
+<div class="empty">
+</div>
+
+<div class="impressum">
+  <a href="/{{request.LANGUAGE_CODE}}/a/impressum">{% trans "Impressum" %}</a>
+</div>
 
 {% endblock %}
