--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -137,14 +137,13 @@ hr{
 
 .impressum {
   text-align: center;
-  margin-top:20px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	clear: right;
 	bottom: 0px;
   width: 100%;
+	height: 30px;
 	background-color: white;
-  /*position: absolute;*/
+  position: fixed;
 }
 .impressum a{
   text-decoration: none;
@@ -349,4 +348,9 @@ width:100%;
 }
 .paypal-form {
 	margin-top:10px;
+}
+
+.empty {
+	width:100%;
+	margin-top:70px;
 }
