--- a/HoPe/Foerder/templates/Foerder/support_us.html
+++ b/HoPe/Foerder/templates/Foerder/support_us.html
@@ -58,11 +58,11 @@
   <div class="content">
     <h3>  {% trans "support_us_headline_02" %}</h3>
     <p> {% trans "support_us_content_02" %} </p>
-    <a class="document-member" href="{% static 'Beitrittserklärung_Freunde _ Förderer_HoPe_Ghana_eV.pdf' %}">
+    <a class="document-member" href="{% static 'Satzung_Foerderverein.pdf' %}">
       <div>
         <div>
         <img src="{% static 'icons/pdf.png' %}" class="support_us_icon">
-        {% trans "Membership application DE" %}
+        {% trans "Satzung DE" %}
         </div>
       </div>
     </a>
@@ -80,7 +80,7 @@
     <h3>{% trans "support_us_headline_03" %}</h3>
     <p> {% trans "support_us_content_03" %} </p>
     <p> {% trans "support_us_content_04" %} </p>
-    <a class="document-member" href="{% static 'Beitrittserklärung_Freunde _ Förderer_HoPe_Ghana_eV.pdf' %}">
+    <a class="document-member" href="{% static 'Spendenformular_für_Freunde_Förderer_HoPe_Ghana_eV.pdf' %}">
       <div>
         <div>
         <img src="{% static 'icons/pdf.png' %}" class="support_us_icon">
