--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="about-us-main-image">
-      <img src="{% static 'Hope_02.jpeg' %}">
+      <img src="{% static 'WorkInProgress.png' %}">
     </div>
   </div>
 
