--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -232,7 +232,7 @@ hr{
 .content_02 .about-us-p {
 	float:left;
 	width:45%;
-	margin:10px;
+	/*margin:10px;*/
 	padding:20px;
 }
 
@@ -282,12 +282,11 @@ hr{
 .about-us-main-image {
 	width: 45%;
 	float:right;
-	margin:10px;
 	margin-left:auto;
 	margin-right: auto;
 	padding:10px;
 	background-color: white;
-	margin:10px;
+	/*margin:10px;*/
 }
 
 .about-us-main-image img {
@@ -353,4 +352,8 @@ width:100%;
 .empty {
 	width:100%;
 	margin-top:70px;
+}
+
+@media (max-width: 1200px) {
+
 }
