--- a/HoPe/templates/base_02.html
+++ b/HoPe/templates/base_02.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'pure.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'custom_02.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
  </head>
   <body>
     {% block content %}{% endblock %}
