--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -372,5 +372,17 @@ width:100%;
 	}
 	.content_02 {
 		width: 100%;
+		padding: 0;
+	}
+	.about-us-main-image {
+		float:none;
+		width: auto;
+		margin:10px;
+	}
+
+	.content_02 .about-us-p {
+		width:auto;
+		float:none;
+		margin:10px;
 	}
 }
