--- a/HoPe/static/css/custom_02.css
+++ b/HoPe/static/css/custom_02.css
@@ -386,6 +386,9 @@ width:100%;
 		float:none;
 		margin:10px;
 	}
+	.splash {
+		width: 95%;
+	}
 }
 /*@media only screen and (max-width: 699px) {
 	body {
