--- a/HoPe/Foerder/templates/Foerder/partner.html
+++ b/HoPe/Foerder/templates/Foerder/partner.html
@@ -74,6 +74,11 @@
           <img src="{% static 'norbertus-logo-icon-h180.png' %}" alt="Norbertusgymnasium Magdeburg"  title="Norbertusgymnasium Magdeburg"/>
         </a>
       </div>
+      <div class="pure-u-1-4 partner-logo-container">
+        <a href= "https://st.hildegard-grundschule.de">
+          <img src="{% static 'St.Hildegard-Grundschule.jpeg' %}" alt="St.Hildegard-Grundschule"  title="St.Hildegard-Grundschule"/>
+        </a>
+      </div>
     </div>
   </div>
   <div class="content">
