fix apple :hover

--- a/HoPe/Foerder/templates/Foerder/about_us.html
+++ b/HoPe/Foerder/templates/Foerder/about_us.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block content %}
 <div class="menu-wrapper">
-  <div class="dropdown-menu-lang">
+  <div onclick="" class="dropdown-menu-lang">
     <span>
       {% if request.LANGUAGE_CODE == 'de' %}
       <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
@@ -74,7 +74,7 @@
           <li>{% trans "Schatzmeisterin: Ines Oelsner" %}</li>
         </ul>
       </div>
-    </div>    
+    </div>
   </div>
 
 
