--- a/HoPe/Foerder/templates/Foerder/events.html
+++ b/HoPe/Foerder/templates/Foerder/events.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="menu-wrapper">
-  <div class="dropdown-menu-lang">
+  <div onclick="" class="dropdown-menu-lang">
     <span>
       {% if request.LANGUAGE_CODE == 'de' %}
       <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
