--- a/HoPe/Foerder/templates/Foerder/partner.html
+++ b/HoPe/Foerder/templates/Foerder/partner.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block content %}
 <div class="menu-wrapper">
-  <div class="dropdown-menu-lang">
+  <div onclick="" class="dropdown-menu-lang">
     <span>
       {% if request.LANGUAGE_CODE == 'de' %}
       <img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">
