--- a/HoPe/Foerder/templates/Foerder/events.html
+++ b/HoPe/Foerder/templates/Foerder/events.html
@@ -51,6 +51,24 @@
 <div class="content-wrapper">
   <div class="content">
     <div>
+      <h1>{% trans "projects" %}</h1>
+      <div class="pure-g">
+        <div class="pure-u-1-3">
+          <a class="event-link" href="spenden_fv_ghana">
+            <div class="event-list-box" style="background-image: url('test');">
+              <!--<img src="{% static 'EventImages/Hope.jpeg' %}" class="event-list-logo">-->
+              <div class="event-list-headline-wrapper">
+                <div class="event-list-headline">{% trans "Partnerorganisation_HouseOfPerspective" %}</div>
+              </div>
+
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="content">
+    <div>
       <h1>{% trans "events_plant" %}</h1>
       <div class="pure-g">
         {% if events_new %}
