--- a/HoPe/templates/base_02.html
+++ b/HoPe/templates/base_02.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="{% static 'pure.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'custom_02.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
  </head>
