--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -50,107 +50,136 @@
 
 <div class="content-wrapper">
   <div class="content">
-    Unsere Partnerorganisation in Ghana
     <h2> {% trans "donate_fv_ghana_headline_01" %} </h2>
-    <img class="donate-fv-ghana-pic-01" src="{% static 'WorkInProgress.png' %}">
-    <div class="donate-fv-ghana-float-right"> {% trans "donate_fv_ghana_content_01_01" %} </div>
-    <div> {% trans "donate_fv_ghana_content_01_02" %} </div>
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_01_01" %} </div>
+    </div>
+    <div class="hope-margin-10 hope-bold"> {% trans "donate_fv_ghana_content_01_02" %} </div>
   </div>
 
   <div class="content">
-    Der Beginn
     <h2> {% trans "donate_fv_ghana_headline_02" %} </h2>
-    <div>
-      <div class="donate-fv-ghana-float-left"> {% trans "donate_fv_ghana_content_02_01" %} </div>
-      <img class="donate-fv-ghana-pic-02-01" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-02-01 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_02_01" %} </div>
+    </div>
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-02-02 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class=" hope-margin-10"> {% trans "donate_fv_ghana_content_02_02" %} </div>
     </div>
     <div>
-      <div class="donate-fv-ghana-float-left"> {% trans "donate_fv_ghana_content_02_02" %} </div>
-      <img class="donate-fv-ghana-pic-02-02" src="{% static 'WorkInProgress.png' %}">
-    </div>
-    <div>
-      <img class="donate-fv-ghana-pic-02-03" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-02-04" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-02-05" src="{% static 'WorkInProgress.png' %}">
-      <div class="donate-fv-ghana-float-right"> {% trans "donate_fv_ghana_content_02_03" %} </div>
-      <img class="donate-fv-ghana-pic-02-06" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-02-07" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-02-08" src="{% static 'WorkInProgress.png' %}">
+      <div>
+        <div class="hope-float-left hope-margin-10 hope-slideshow-container">
+          <div class="hope-slideshow-slide hope-slideshow-fade">
+            <img class="donate-fv-ghana-pic-02-03" src="{% static 'WorkInProgress.png' %}">
+          </div>
+          <div class="hope-slideshow-slide hope-slideshow-fade">
+            <img class="donate-fv-ghana-pic-02-04" src="{% static 'WorkInProgress.png' %}">
+          </div>
+          <div class="hope-slideshow-slide hope-slideshow-fade">
+            <img class="donate-fv-ghana-pic-02-05" src="{% static 'WorkInProgress.png' %}">
+          </div>
+        </div>
+        <div class=" hope-margin-10"> {% trans "donate_fv_ghana_content_02_03" %} </div>
+      </div>
+      <div class="hope-width-100 hope-text-align-center">
+        <img class="donate-fv-ghana-pic-02-06 hope-display-inline-block hope-width-33" src="{% static 'WorkInProgress.png' %}">
+        <img class="donate-fv-ghana-pic-02-07 hope-display-inline-block hope-width-33" src="{% static 'Hope_01.jpeg' %}">
+        <img class="donate-fv-ghana-pic-02-08 hope-display-inline-block hope-width-33" src="{% static 'WorkInProgress.png' %}">
+      </div>
     </div>
   </div>
 
   <div class="content">
-    Kooperationen mit Schulen
     <h2> {% trans "donate_fv_ghana_headline_03" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_03_01" %} </div>
-    <img class="donate-fv-ghana-pic-03" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-03 hope-float-right hope-margin-10" src="{% static 'Hope_03.jpeg' %}">
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_03_01" %} </div>
+    </div>
   </div>
 
   <div class="content">
-    Erwachsenen Bildung
     <h2> {% trans "donate_fv_ghana_headline_04" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_04_01" %} </div>
-    <img class="donate-fv-ghana-pic-04-01" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-04-02" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-04-03" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-04-04" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-04-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-display-block hope-float-right hope-margin-10">
+        <div>
+          <img class="donate-fv-ghana-pic-04-02" src="{% static 'WorkInProgress.png' %}">
+        </div>
+        <div>
+          <img class="donate-fv-ghana-pic-04-03" src="{% static 'WorkInProgress.png' %}">
+        </div>
+      </div>
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_04_01" %} </div>
+    </div>
+    <div class="hope-width-100 hope-text-align-center">
+      <img class="donate-fv-ghana-pic-04-04" src="{% static 'Hope_04.jpeg' %}">
+    </div>
   </div>
 
   <div class="content">
-    Aktivitäten während Corona
     <h2> {% trans "donate_fv_ghana_headline_05" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_05_01" %} </div>
-    <img class="donate-fv-ghana-pic-05-01" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-05-02" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-05-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-05-02 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_05_01" %} </div>
   </div>
 
   <div class="content">
-    Unterrichtsmaterialien
     <h2> {% trans "donate_fv_ghana_headline_06" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_06_01" %} </div>
-    <img class="donate-fv-ghana-pic-06" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-06 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_06_01" %} </div>
   </div>
 
   <div class="content">
-    Aufklärung und Prävention vom Coronavirus
     <h2> {% trans "donate_fv_ghana_headline_07" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_07_01" %} </div>
-    <div> {% trans "donate_fv_ghana_content_07_02" %} </div>
-    <div> {% trans "donate_fv_ghana_content_07_03" %} </div>
-    <img class="donate-fv-ghana-pic-07-01" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-07-02" src="{% static 'WorkInProgress.png' %}">
-    <div> {% trans "donate_fv_ghana_content_07_04" %} </div>
-    <img class="donate-fv-ghana-pic-07-03" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-07-04" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-07-05" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_01" %} </div>
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_02" %} </div>
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_03" %} </div>
+    <div class="hope-width-100 hope-text-align-center">
+      <img class="donate-fv-ghana-pic-07-01" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-07-02" src="{% static 'WorkInProgress.png' %}">
+    </div>
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-07-03 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_04" %} </div>
+    </div>
+    <div class="hope-width-100 hope-text-align-center">
+      <img class="donate-fv-ghana-pic-07-04" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-07-05" src="{% static 'WorkInProgress.png' %}">
+    </div>
   </div>
 
   <div class="content">
     Bau von neuen Brunnen
     <h2> {% trans "donate_fv_ghana_headline_08" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_08_01" %} </div>
-    <img class="donate-fv-ghana-pic-08" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-08 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_08_01" %} </div>
   </div>
 
   <div class="content">
     Die Farm
     <h2> {% trans "donate_fv_ghana_headline_09" %} </h2>
-    <div> {% trans "donate_fv_ghana_content_09_01" %} </div>
-    <div> {% trans "donate_fv_ghana_content_09_02" %} </div>
-    <img class="donate-fv-ghana-pic-09-01" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-09-02" src="{% static 'WorkInProgress.png' %}">
-    <div> {% trans "donate_fv_ghana_content_09_03" %} </div>
-    <div> {% trans "donate_fv_ghana_content_09_04" %} </div>
-    <img class="donate-fv-ghana-pic-09-03" src="{% static 'WorkInProgress.png' %}">
-    <div> {% trans "donate_fv_ghana_content_09_05" %} </div>
-    <div> {% trans "donate_fv_ghana_content_09_06" %} </div>
-    <div> {% trans "donate_fv_ghana_content_09_07" %} </div>
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_01" %} </div>
+    <div class="hope-width-100">
+      <img class="donate-fv-ghana-pic-09-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-09-02 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_02" %} </div>
+    </div>
+    <div class="hope-display-inline-block">
+      <img class="donate-fv-ghana-pic-09-03 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_03" %} </div>
+    </div>
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_04" %} </div>
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_05" %} </div>
+    <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_06" %} </div>
   </div>
 
   <div class="content">
-    Ende
-    <img class="donate-fv-ghana-pic-10" src="{% static 'WorkInProgress.png' %}">
-    <div> {% trans "donate_fv_ghana_content_09_01" %} </div>
+    <div class="hope-width-100 hope-text-align-center">
+      <img class="donate-fv-ghana-pic-10" src="{% static 'WorkInProgress.png' %}">
+      <div class="hope-font-size-160"> {% trans "donate_fv_ghana_content_10_01" %} </div>
+    </div>
   </div>
 </div>
 
@@ -159,4 +188,8 @@
   <a href="/{{request.LANGUAGE_CODE}}/a/impressum">{% trans "Impressum" %}</a>
 </div>
 
+<div class="hope-empty">
+</div>
+
+<script src="{% static 'hope_slideshow.js' %}"></script>
 {% endblock %}
