--- a/HoPe/static/css/donate_fv_ghana.css
+++ b/HoPe/static/css/donate_fv_ghana.css
@@ -14,44 +14,101 @@
 }
 
 .donate-fv-ghana-pic-02-03 {
-  height: 300px;
-  width: 300px;
+  /*height: 300px;
+  width: 300px;*/
+  width:100%
 }
 
 .donate-fv-ghana-pic-02-04 {
-  height: 150px;
-  width: 100px;
+  /*height: 150px;
+  width: 100px;*/
+  width:100%
 }
 
 .donate-fv-ghana-pic-02-05 {
-  height: 100px;
-  width: 150px;
+  /*height: 100px;
+  width: 150px;*/
+  width:100%
 }
 
 .donate-fv-ghana-pic-02-06 {
-  height: 100px;
-  width: 150px;
 }
 
 .donate-fv-ghana-pic-02-07 {
-  height: 100px;
-  width: 150px;
 }
 
 .donate-fv-ghana-pic-02-08 {
-  height: 100px;
-  width: 150px;
 }
 
-.donate-fv-ghana-float-right {
-  float: right;
+.donate-fv-ghana-pic-03 {
+width:400px;
 }
 
-.donate-fv-ghana-float-left {
-  float: left;
+.donate-fv-ghana-pic-04-01 {
+width:400px;
 }
 
+.donate-fv-ghana-pic-04-02 {
+width:200px;
+}
 
-.donate-fv-ghana-relative {
-    position: relative;
+.donate-fv-ghana-pic-04-03 {
+width:200px;
+}
+
+.donate-fv-ghana-pic-04-04 {
+width:500px;
+}
+
+.donate-fv-ghana-pic-05-01 {
+width:200px;
+}
+
+.donate-fv-ghana-pic-05-02 {
+width:200px;
+}
+
+.donate-fv-ghana-pic-06 {
+width:500px;
+}
+
+.donate-fv-ghana-pic-07-01 {
+width:65%;
+height: 400px;
+}
+
+.donate-fv-ghana-pic-07-02 {
+width:25%;
+height: 400px;
+}
+
+.donate-fv-ghana-pic-07-03 {
+width:400px;
+}
+
+.donate-fv-ghana-pic-07-04 {
+width:calc((100% - 40px) / 2);
+}
+
+.donate-fv-ghana-pic-07-05 {
+width:calc((100% - 40px) / 2);
+}
+
+.donate-fv-ghana-pic-08 {
+width:200px;
+}
+
+.donate-fv-ghana-pic-09-01 {
+width:calc((100% - 40px) / 2);
+}
+.donate-fv-ghana-pic-09-02 {
+width:calc((100% - 40px) / 2);
+}
+
+.donate-fv-ghana-pic-09-03 {
+width:400px;
+}
+
+.donate-fv-ghana-pic-10 {
+width:400px;
 }
